color: Remove unneeded ColorBehavior parameters from ImageSource

This is no longer needed, now that we're not supporting parameterizing
the ColorBehavior for images.

This was also causing crashes (presumably because re-creating the
decoder could sometimes fail).

TBR=junov
BUG=729912

Review-Url: https://codereview.chromium.org/2925623003
Cr-Commit-Position: refs/heads/master@{#477223}

Former-commit-id: d27758dcb7026312da955a8ba8d01fbaf925882a