third_party/WebKit/Source/platform/graphics/ImageSource.h
@@ -91,7 +91,7 @@ class PLATFORM_EXPORT ImageSource final {
   size_t FrameCount() const;
 
   // Attempts to create the requested frame.
-  sk_sp<SkImage> CreateFrameAtIndex(size_t, const ColorBehavior&);
+  sk_sp<SkImage> CreateFrameAtIndex(size_t);
 
   float FrameDurationAtIndex(size_t) const;
   bool FrameHasAlphaAtIndex(
@@ -106,7 +106,6 @@ class PLATFORM_EXPORT ImageSource final {
 
  private:
   std::unique_ptr<DeferredImageDecoder> decoder_;
-  ColorBehavior decoder_color_behavior_;
   bool all_data_received_ = false;
 };
 
